RESOLVED FIXED62429
[EFL][WK2] Minor fix: fix coding style and remove unnecessary codes for WebKit2 efl port's PageClientImpl
https://bugs.webkit.org/show_bug.cgi?id=62429
Summary [EFL][WK2] Minor fix: fix coding style and remove unnecessary codes for WebKi...
Eunmi Lee
Reported 2011-06-09 22:42:07 PDT
I fixed coding style and removed unnecessary codes in the WebPageProxyEfl and PageClientImpl.
Attachments
Patch (8.56 KB, patch)
2011-06-09 22:45 PDT, Eunmi Lee
no flags
Patch (9.31 KB, patch)
2011-06-09 23:10 PDT, Eunmi Lee
no flags
Patch (9.83 KB, patch)
2011-06-10 00:45 PDT, Eunmi Lee
no flags
Patch (6.70 KB, patch)
2011-06-12 21:07 PDT, Eunmi Lee
no flags
Eunmi Lee
Comment 1 2011-06-09 22:45:22 PDT
Eunmi Lee
Comment 2 2011-06-09 23:10:22 PDT
Eunmi Lee
Comment 3 2011-06-09 23:10:49 PDT
(In reply to comment #2) > Created an attachment (id=96698) [details] > Patch I removed WTF::
Gyuyoung Kim
Comment 4 2011-06-10 00:02:42 PDT
Comment on attachment 96698 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=96698&action=review > Source/WebKit2/UIProcess/efl/WebPageProxyEfl.cpp:57 > + osVersion = String(name.sysname) + " " + String(name.machine); I think makeString() is better than string operation. I also make a bug for similar implementation. (Bug 62434)
Eunmi Lee
Comment 5 2011-06-10 00:45:05 PDT
Eunmi Lee
Comment 6 2011-06-10 00:46:01 PDT
(In reply to comment #4) > (From update of attachment 96698 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=96698&action=review > > > Source/WebKit2/UIProcess/efl/WebPageProxyEfl.cpp:57 > > + osVersion = String(name.sysname) + " " + String(name.machine); > > I think makeString() is better than string operation. I also make a bug for similar implementation. (Bug 62434) Done. Thanks for your comment :) I fixed above codes to use makeString.
Eunmi Lee
Comment 7 2011-06-10 00:58:02 PDT
(In reply to comment #5) > Created an attachment (id=96705) [details] > Patch I fixed string operation to makeString, and added enterAcceleratedCompositingMode and exitAcceleratedCompositingMode for ACCELERATED_COMPOSITING
Leandro Pereira
Comment 8 2011-06-10 09:43:49 PDT
Comment on attachment 96705 [details] Patch There are some unrelated changes on this patch; please make these changes in different patches. This should help if a rollout is ever needed.
Eunmi Lee
Comment 9 2011-06-12 21:07:24 PDT
Eunmi Lee
Comment 10 2011-06-12 21:09:41 PDT
(In reply to comment #8) > (From update of attachment 96705 [details]) > There are some unrelated changes on this patch; please make these changes in different patches. This should help if a rollout is ever needed. Thanks for your comments. I've removed unrelated changes from this patch and I will make new patch for other changes.
Leandro Pereira
Comment 11 2011-06-13 07:35:32 PDT
(In reply to comment #10) > Thanks for your comments. > I've removed unrelated changes from this patch and I will make new patch for > other changes. Informal r+.
Kenneth Rohde Christiansen
Comment 12 2011-06-13 07:49:47 PDT
Comment on attachment 96916 [details] Patch Making the informal r+, formal
WebKit Review Bot
Comment 13 2011-06-13 08:29:07 PDT
Comment on attachment 96916 [details] Patch Clearing flags on attachment: 96916 Committed r88640: <http://trac.webkit.org/changeset/88640>
WebKit Review Bot
Comment 14 2011-06-13 08:29:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.